feat: css of front page adjusted and poilished, desktop and mobile version ready

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
 @import url(https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap);
 
-:root {
+/* :root {
   /* Base font size */
-  font-size: 10px;   
-  
-  /* Set neon color */
-  --neon-me-text-color: rgb(159, 12, 175);
+/* font-size: 10px;    */
+
+/* Set neon color */
+/* --neon-me-text-color: rgb(159, 12, 175);
   --neon-me-border-color: none;
   --neon-welcome-text-color:rgb(79, 109, 192);
   --neon-welcome-border-color: rgb(24, 81, 131);
   --neon-drive-text-color:rgb(228, 81, 36);
-  --neon-drive-border-color: rgb(24, 81, 131);
-}
-
+  --neon-drive-border-color: rgb(24, 81, 131); 
+}*/
+/* 
 body {
   /* font-family: 'Exo 2', sans-serif; */
-  font-family: 'Gochi hand';
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center;   */
-  background: #000;
-  /* min-height: 100vh; */
-}
+/* font-family: 'Gochi hand'; */
+/* display: flex; */
+/* justify-content: center; */
+/* align-items: center;   */
+/* background: #000; */
+/* min-height: 100vh; 
+}*/
 
 /* h1 {
   font-size: 13rem;
@@ -78,3 +78,33 @@ h1:focus {
         box-shadow: none;
     }    
 } */
+
+@import url("https://fonts.googleapis.com/css2?family=Neucha&display=swap");
+
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: black;
+  font-family: "Neucha", cursive;
+  position: relative;
+  z-index: 0;
+}
+
+.header {
+  width: 100vw;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 800px) {
+  .header {
+    margin: 4%;
+  }
+}
