--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,20 +1,81 @@
-.forgot-button-container {
-  display: flex;
-  flex-direction: row;
+.heading {
+  text-transform: uppercase;
+  font-size: 7vh;
+  margin: 4%;
+  color: white;
+  z-index: 1;
+  text-align: center;
+  position: relative;
+}
+
+.auth-form{
+  display: flex; 
+  flex-direction: column;
+  width: 100vw;
+  position: relative; 
   justify-content: center;
   align-items: center;
-  height: 20vh;
+  position: relative;
+}
+
+.auth-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  position: relative
+}
+
+.input{
+  margin: 2%;
+  width: 100%;
+  height: 6vh;
+  border-radius: 3rem;
+  font-size: 3vh;
+  font-family: inherit;
+  border: none;
+  text-align: center;
+  transition: 0.2s;
+  box-shadow: inset 0 0 5px black;
+  background-color: rgb(208, 217, 243);
+  position: relative; 
 }
 
 
-.forgot {
-  border: 2px solid rgb(54, 85, 187);
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  align-items:flex-end;
+  height: 20vh;
+  position: relative;
+}
+
+
+.main__button {
+  border: 2px solid rgb(243, 244, 248);
   color: rgb(191, 201, 207);
   background-color: black;
   border-radius: 3rem;
   margin: 2vh;
   width: 30vw;
   height: 7vh;
-  font-family: "Gochi hand";
-  font-size: 2rem;
+  font-family:inherit;
+  font-size: 1rem;
+  position: relative;
 }
+
+@media (min-width: 800px) {
+  .heading {
+    font-size: 7vh;
+    margin: 3%;
+  }
+
+.input{
+  width:50vw;
+}
+
+  .main__button{
+    width:25vw;
+  }
+} ;
