--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,12 @@ h1:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 0;
 }
 
 @media (min-width: 800px) {
   .header {
-    margin: 4%;
+  margin-top:3%;
   }
 }
