--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -27,7 +27,7 @@
 }
 
 .input{
-  margin: 2%;
+  margin: 4%;
   width: 100%;
   height: 6vh;
   border-radius: 3rem;
@@ -57,25 +57,36 @@
   color: rgb(191, 201, 207);
   background-color: black;
   border-radius: 3rem;
-  margin: 2vh;
+  margin: 3vh;
   width: 30vw;
   height: 7vh;
   font-family:inherit;
   font-size: 1rem;
   position: relative;
+  transition: 0.2s;
+}
+.main__button:hover{
+  color: black;
+  background-color: rgb(191, 201, 207);
+}
+.main__button:active{
+  transform: scale(0.9);
+  box-shadow: 0 0 5px  rgb(191, 201, 207);;
 }
 
 @media (min-width: 800px) {
   .heading {
-    font-size: 7vh;
-    margin: 3%;
+    font-size: 8vh;
+    margin: 1%;
   }
 
 .input{
-  width:50vw;
+  width:35vw;
+  margin: 2%;
 }
 
   .main__button{
-    width:25vw;
+    width:20vw;
+    font-size: 1.5rem;
   }
 } ;
