--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid rgb(174, 186, 226);
+  border: 4px solid rgb(174, 186, 226);
   color: rgb(161, 186, 201);
-  background-color: black;
+  background-color: rgb(14, 13, 13);
   position: absolute;
-  z-index: 2;
+  z-index: 4;
   border-radius: 2rem;
   width: 80vw;
   height: fit-content;
@@ -25,7 +25,7 @@
 }
 
 #close {
-  z-index: 2;
+  z-index: 4;
 }
 
 @media (min-width: 800px) {
