--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ h1:focus {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
   background-color: black;
   font-family: "Neucha", cursive;
@@ -96,17 +96,11 @@ h1:focus {
 
 .header {
   width: 100vw;
-  height: 30vh;
+  height: 38vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
   z-index: 0;
-}
-
-@media (min-width: 800px) {
-  .header {
-  margin-top:3%;
-  }
 }
