--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,19 +1,22 @@
 .heading {
+  height: 8vh;
   text-transform: uppercase;
-  font-size: 7vh;
-  margin: 4%;
+  font-size: 8vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   color: white;
   z-index: 1;
   text-align: center;
   position: relative;
 }
 
-.auth-form{
-  display: flex; 
+.auth-form {
+  display: flex;
   flex-direction: column;
   width: 100vw;
-  position: relative; 
-  justify-content: center;
+  height: 45vh;
+  position: relative;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
 }
@@ -22,71 +25,77 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80%;
-  position: relative
+  width: 80vw;
+  margin-top:1vh;
+  margin-bottom: 1vh;
+  position: relative;
 }
 
-.input{
-  margin: 4%;
+.input {
+  margin-top: 4%;
+  margin-bottom:4%;
   width: 100%;
-  height: 6vh;
+  height: 5vh;
   border-radius: 3rem;
   font-size: 3vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
   font-family: inherit;
   border: none;
   text-align: center;
   transition: 0.2s;
   box-shadow: inset 0 0 5px black;
   background-color: rgb(208, 217, 243);
-  position: relative; 
-}
-
-
-.button-container {
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items:flex-end;
-  height: 20vh;
   position: relative;
 }
 
-
+.button-container {
+  display: flex;
+  width:80%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 15vh;
+  position: relative;
+}
 .main__button {
   border: 2px solid rgb(243, 244, 248);
   color: rgb(191, 201, 207);
   background-color: black;
   border-radius: 3rem;
-  margin: 3vh;
   width: 30vw;
-  height: 7vh;
-  font-family:inherit;
+  height: 6vh;
+  /* margin: 4vh; */
+  font-family: inherit;
   font-size: 1rem;
   position: relative;
   transition: 0.2s;
 }
-.main__button:hover{
+.main__button:hover {
   color: black;
   background-color: rgb(191, 201, 207);
 }
-.main__button:active{
+.main__button:active {
   transform: scale(0.9);
-  box-shadow: 0 0 5px  rgb(191, 201, 207);;
+  box-shadow: 0 0 5px rgb(191, 201, 207);
 }
 
 @media (min-width: 800px) {
   .heading {
     font-size: 8vh;
-    margin: 1%;
   }
 
-.input{
-  width:35vw;
-  margin: 2%;
-}
-
-  .main__button{
-    width:20vw;
-    font-size: 1.5rem;
+  .input {
+    width: 25vw;
+    margin: 2%;
+  }
+  .button-container {
+    width: 25vw;
+    justify-content: space-between;
+  }
+  
+    .main__button {
+    width: 10vw;
+    font-size: 1.2rem;
   }
 } ;
