--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -1,15 +1,19 @@
 .alert-message-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  border: 4px solid rgb(174, 186, 226);
+  border: 2px solid rgb(161, 186, 201);
   color: rgb(161, 186, 201);
   background-color: rgb(14, 13, 13);
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   z-index: 4;
-  border-radius: 2rem;
+  border-radius: 1.2rem;
   width: 80vw;
+  min-height: 15vh;
   height: fit-content;
   padding: 3%;
 }
@@ -26,11 +30,12 @@
 
 #close {
   z-index: 4;
+  height: 5vh;
 }
 
 @media (min-width: 800px) {
   .alert-message-container {
-    width: 50vw;
+    width: 25vw;
   }
 
   #close {
