feat: css adjusted mui icons imported

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,13 @@ h1:focus {
 
 @import url("https://fonts.googleapis.com/css2?family=Neucha&display=swap");
 
+:root {
+  --theme-color: white;
+  --theme-background-color: black;
+  --theme-input-color:rgb(208, 217, 243);
+  --theme-box-shadow-active-color:rgb(191, 201, 207);
+}
+
 .App {
   width: 100vw;
   height: 100vh;
@@ -88,19 +95,8 @@ h1:focus {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: black;
+  background-color: var(--theme-background-color);
   font-family: "Neucha", cursive;
-  position: relative;
-  z-index: 0;
-}
-
-.header {
-  width: 100vw;
-  height: 38vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   position: relative;
   z-index: 0;
 }
