--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,10 +1,21 @@
+.logo__container {
+  width: 100vw;
+  height: 38vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
 .heading {
   height: 8vh;
   text-transform: uppercase;
   font-size: 8vh;
   margin-top: 2vh;
   margin-bottom: 2vh;
-  color: white;
+  color: var(--theme-color);
   z-index: 1;
   text-align: center;
   position: relative;
@@ -26,14 +37,14 @@
   align-items: center;
   justify-content: center;
   width: 80vw;
-  margin-top:1vh;
+  margin-top: 1vh;
   margin-bottom: 1vh;
   position: relative;
 }
 
 .input {
   margin-top: 4%;
-  margin-bottom:4%;
+  margin-bottom: 4%;
   width: 100%;
   height: 5vh;
   border-radius: 3rem;
@@ -44,14 +55,14 @@
   border: none;
   text-align: center;
   transition: 0.2s;
-  box-shadow: inset 0 0 5px black;
-  background-color: rgb(208, 217, 243);
+  box-shadow: inset 0 0 5px var(--theme-background-color);
+  background-color: var(--theme-input-color);
   position: relative;
 }
 
 .button-container {
   display: flex;
-  width:80%;
+  width: 80%;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -59,25 +70,24 @@
   position: relative;
 }
 .main__button {
-  border: 2px solid rgb(243, 244, 248);
-  color: rgb(191, 201, 207);
-  background-color: black;
+  border: 2px solid var(--theme-color);
+  color: var(--theme-color);
+  background-color:var(--theme-background-color);
   border-radius: 3rem;
   width: 30vw;
   height: 6vh;
-  /* margin: 4vh; */
   font-family: inherit;
   font-size: 1rem;
   position: relative;
   transition: 0.2s;
 }
 .main__button:hover {
-  color: black;
-  background-color: rgb(191, 201, 207);
+  color: var(--theme-background-color);
+  background-color: var(--theme-color);
 }
 .main__button:active {
   transform: scale(0.9);
-  box-shadow: 0 0 5px rgb(191, 201, 207);
+  box-shadow: 0 0 5px var(--theme-box-shadow-active-color);
 }
 
 @media (min-width: 800px) {
@@ -93,8 +103,8 @@
     width: 25vw;
     justify-content: space-between;
   }
-  
-    .main__button {
+
+  .main__button {
     width: 10vw;
     font-size: 1.2rem;
   }
