--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  border: 2px solid rgb(161, 186, 201);
-  color: rgb(161, 186, 201);
-  background-color: rgb(14, 13, 13);
+  border: 2px solid var(--theme-color);
+  color: var(--theme-color);
+  background-color: var(--theme-background-color);
   position: absolute;
   left: 50%;
   top: 50%;
